wordpress/wordpress-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: wordpress-ingress
#   labels:
#     name: wordpress-ingress
# spec:
#   ingressClassName: kong
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: wordpress
#                 port:
#                   number: 8080

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  labels:
    name: wordpress-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 8080
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: mysv-lb
          #       port:
          #         number: 8081
